try to adjust permission

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
 
       # Step 4: Create the release on GitHub and upload the binary
       - name: Create Release
+        permissions:
+          contents: write
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
